<resources>
    <string name="app_name">qasu Netrunner Draft</string>
    <string name="version">1.6.2</string>
    <string-array name="array_decks">
        <item>@string/deck_0</item>
        <item>@string/deck_1</item>
        <item>@string/deck_2</item>
        <item>@string/deck_3</item>
        <item>@string/deck_4</item>
        <item>@string/deck_5</item>
        <item>@string/deck_6</item>
        <item>@string/deck_7</item>
    </string-array>
    <string-array name="array_expansions">
        <item>@string/exp_cyber_war</item>
        <item>@string/exp_core_set</item>
        <item>@string/exp_what_lies_ahead</item>
        <item>@string/exp_trace_amount</item>
        <item>@string/exp_cyber_exodus</item>
        <item>@string/exp_a_study_in_static</item>
        <item>@string/exp_humanitys_shadow</item>
        <item>@string/exp_future_proof</item>
        <item>@string/exp_creation_and_control</item>
        <item>@string/exp_opening_moves</item>
        <item>@string/exp_second_thoughts</item>
        <item>@string/exp_mala_tempora</item>
        <item>@string/exp_true_colors</item>
        <item>@string/exp_fear_and_loathing</item>
        <item>@string/exp_double_time</item>
        <item>@string/exp_honor_and_profit</item>
        <item>@string/exp_upstalk</item>
        <item>@string/exp_the_spaces_between</item>
        <item>@string/exp_first_contact</item>
        <item>@string/exp_up_and_over</item>
        <item>@string/exp_all_that_remains</item>
        <item>@string/exp_the_source</item>
        <item>@string/exp_order_and_chaos</item>
        <item>@string/exp_stimhack_draft_cube</item>
    </string-array>
    <string-array name="array_keys_selected_expansions">
        <item>@string/key_selected_exp_cyber_war</item>
        <item>@string/key_selected_exp_core_set</item>
        <item>@string/key_selected_exp_what_lies_ahead</item>
        <item>@string/key_selected_exp_trace_amount</item>
        <item>@string/key_selected_exp_cyber_exodus</item>
        <item>@string/key_selected_exp_a_study_in_static</item>
        <item>@string/key_selected_exp_humanitys_shadow</item>
        <item>@string/key_selected_exp_future_proof</item>
        <item>@string/key_selected_exp_creation_and_control</item>
        <item>@string/key_selected_exp_opening_moves</item>
        <item>@string/key_selected_exp_second_thoughts</item>
        <item>@string/key_selected_exp_mala_tempora</item>
        <item>@string/key_selected_exp_true_colors</item>
        <item>@string/key_selected_exp_fear_and_loathing</item>
        <item>@string/key_selected_exp_double_time</item>
        <item>@string/key_selected_exp_honor_and_profit</item>
        <item>@string/key_selected_exp_upstalk</item>
        <item>@string/key_selected_exp_the_spaces_between</item>
        <item>@string/key_selected_exp_first_contact</item>
        <item>@string/key_selected_exp_up_and_over</item>
        <item>@string/key_selected_exp_all_that_remains</item>
        <item>@string/key_selected_exp_the_source</item>
        <item>@string/key_selected_exp_order_and_chaos</item>
        <item>@string/key_selected_exp_stimhack_draft_cube</item>
    </string-array>
    <string name="key_selected_exp_cyber_war">key_selected_exp_cyber_war</string>
    <string name="key_selected_exp_core_set">key_selected_exp_core_set</string>
    <string name="key_selected_exp_what_lies_ahead">key_selected_exp_what_lies_ahead</string>
    <string name="key_selected_exp_trace_amount">key_selected_exp_trace_amount</string>
    <string name="key_selected_exp_cyber_exodus">key_selected_exp_cyber_exodus</string>
    <string name="key_selected_exp_a_study_in_static">key_selected_exp_a_study_in_static</string>
    <string name="key_selected_exp_humanitys_shadow">key_selected_exp_humanitys_shadow</string>
    <string name="key_selected_exp_future_proof">key_selected_exp_future_proof</string>
    <string name="key_selected_exp_creation_and_control">key_selected_exp_creation_and_control</string>
    <string name="key_selected_exp_opening_moves">key_selected_exp_opening_moves</string>
    <string name="key_selected_exp_second_thoughts">key_selected_exp_second_thoughts</string>
    <string name="key_selected_exp_mala_tempora">key_selected_exp_mala_tempora</string>
    <string name="key_selected_exp_true_colors">key_selected_exp_true_colors</string>
    <string name="key_selected_exp_fear_and_loathing">key_selected_exp_fear_and_loathing</string>
    <string name="key_selected_exp_double_time">key_selected_exp_double_time</string>
    <string name="key_selected_exp_honor_and_profit">key_selected_exp_honor_and_profit</string>
    <string name="key_selected_exp_upstalk">key_selected_exp_upstalk</string>
    <string name="key_selected_exp_the_spaces_between">key_selected_exp_the_spaces_between</string>
    <string name="key_selected_exp_first_contact">key_selected_exp_first_contact</string>
    <string name="key_selected_exp_up_and_over">key_selected_exp_up_and_over</string>
    <string name="key_selected_exp_all_that_remains">key_selected_exp_all_that_remains</string>
    <string name="key_selected_exp_the_source">key_selected_exp_the_source</string>
    <string name="key_selected_exp_order_and_chaos">key_selected_exp_order_and_chaos</string>
    <string name="key_selected_exp_stimhack_draft_cube">key_selected_exp_stimhack_draft_cube</string>
    <string name="app_description">
        Shuffle the 4 Corp draft decks and the 4 Runner draft decks to play Android Netrunner Draft with the official draft rules. Choose the number of Core Sets and Expansions to use in the Expansions menu then click on Shuffle !\n
        \n
        Decks Rules :\n
         - Minimum 30 cards per deck\n
         - No influence limitation\n
         - 30-34 cards : 14-15 Agenda points\n
         - 35-39 cards : 16-17 Agenda points\n
         - 40-44 cards : 18-19 Agenda points\n
         - 45-49 cards : 20-21 Agenda points\n
        \n
        Corp Starter Set :\n
         - 5 x Priority Requisition\n
         - 2 x PAD Campaign\n
        Official Runner Starter Set :\n
        - 2 x Armitage Codebusting\n
        - 3 x Crypsis\n
        Alternative Runner Starter Set :\n
        - 2 x Armitage Codebusting\n
        - 1 x Force of Nature\n
        - 1 x Aurora\n
        - 1 x Pipeline
    </string>
    <string name="deck_0">Corp 1</string>
    <string name="deck_1">Corp 2</string>
    <string name="deck_2">Corp 3</string>
    <string name="deck_3">Corp 4</string>
    <string name="deck_4">Runner 1</string>
    <string name="deck_5">Runner 2</string>
    <string name="deck_6">Runner 3</string>
    <string name="deck_7">Runner 4</string>
    <string name="exp_cyber_war">Cyber War</string>
    <string name="exp_core_set">Core Set</string>
    <string name="exp_what_lies_ahead">What Lies Ahead</string>
    <string name="exp_trace_amount">Trace Amount</string>
    <string name="exp_cyber_exodus">Cyber Exodus</string>
    <string name="exp_a_study_in_static">A Study in Static</string>
    <string name="exp_humanitys_shadow">Humanity\'s Shadow</string>
    <string name="exp_future_proof">Future Proof</string>
    <string name="exp_creation_and_control">Creation And Control</string>
    <string name="exp_opening_moves">Opening Moves</string>
    <string name="exp_second_thoughts">Second Thoughts</string>
    <string name="exp_mala_tempora">Mala Tempora</string>
    <string name="exp_true_colors">True Colors</string>
    <string name="exp_fear_and_loathing">Fear And Loathing</string>
    <string name="exp_double_time">Double Time</string>
    <string name="exp_honor_and_profit">Honor And Profit</string>
    <string name="exp_upstalk">Upstalk</string>
    <string name="exp_the_spaces_between">The Spaces Between</string>
    <string name="exp_first_contact">First Contact</string>
    <string name="exp_up_and_over">Up and Over</string>
    <string name="exp_all_that_remains">All That Remains</string>
    <string name="exp_the_source">The Source</string>
    <string name="exp_order_and_chaos">Order and Chaos</string>
    <string name="exp_stimhack_draft_cube">StimHack Draft Cube</string>
    <string name="criteria_0">Card</string>
    <string name="criteria_1">Corp</string>
    <string name="criteria_2">Runner</string>
    <string name="criteria_3">Agenda</string>
    <string name="criteria_4">Asset</string>
    <string name="criteria_5">Upgrade</string>
    <string name="criteria_6">Operation</string>
    <string name="criteria_7">Ice</string>
    <string name="criteria_8">Program</string>
    <string name="criteria_9">Icebreaker</string>
    <string name="criteria_10">Hardware</string>
    <string name="criteria_11">Resource</string>
    <string name="criteria_12">Event</string>
    <string name="criteria_13">Indentity</string>
    <string name="accelerated_beta_test">Accelerated Beta Test</string>
    <string name="access_to_globalsec">Access to Globalsec</string>
    <string name="account_siphon">Account Siphon</string>
    <string name="adonis_campaign">Adonis Campaign</string>
    <string name="aesops_pawnshop">Aesop\'s Pawnshop</string>
    <string name="aggressive_negotiation">Aggressive Negotiation</string>
    <string name="aggressive_secretary">Aggressive Secretary</string>
    <string name="akamatsu_mem_chip">Akamatsu Mem Chip</string>
    <string name="akitaro_watanabe">Akitaro Watanabe</string>
    <string name="all_nighter">All-nighter</string>
    <string name="amazon_industrial_zone">Amazon Industrial Zone</string>
    <string name="anonymous_tip">Anonymous Tip</string>
    <string name="archer">Archer</string>
    <string name="archived_memories">Archived Memories</string>
    <string name="armitage_codebusting">Armitage Codebusting</string>
    <string name="ash_2x3zb9cy">Ash 2X3ZB9CY</string>
    <string name="astroscript_pilot_program">Astroscript Pilot Program</string>
    <string name="aurora">Aurora</string>
    <string name="bank_job">Bank Job</string>
    <string name="battering_ram">Battering Ram</string>
    <string name="beanstalk_royalties">Beanstalk Royalties</string>
    <string name="bernice_mai">Bernice Mai</string>
    <string name="big_brother">Big Brother</string>
    <string name="biotic_labor">Biotic Labor</string>
    <string name="braintrust">Braintrust</string>
    <string name="breaking_news">Breaking News</string>
    <string name="bullfrog">Bullfrog</string>
    <string name="burke_bugs">Burke Bugs</string>
    <string name="caduceus">Caduceus</string>
    <string name="cell_portal">Cell Portal</string>
    <string name="chilo_city_grid">ChiLo City Grid</string>
    <string name="chimera">Chimera</string>
    <string name="chum">Chum</string>
    <string name="closed_accounts">Closed Accounts</string>
    <string name="commercialization">Commercialization</string>
    <string name="compromised_employee">Compromised Employee</string>
    <string name="corporate_troubleshooter">Corporate Troubleshooter</string>
    <string name="corporate_war">Corporate War</string>
    <string name="corroder">Corroder</string>
    <string name="cortez_chip">Cortez Chip</string>
    <string name="crash_space">Crash Space</string>
    <string name="creeper">Creeper</string>
    <string name="crescentus">Crescentus</string>
    <string name="crypsis">Crypsis</string>
    <string name="cyberfeeder">Cyberfeeder</string>
    <string name="darwin">Darwin</string>
    <string name="data_dealer">Data Dealer</string>
    <string name="data_hound">Data Hound</string>
    <string name="data_leak_reversal">Data Leak Reversal</string>
    <string name="data_mine">Data Mine</string>
    <string name="data_raven">Data Raven</string>
    <string name="datasucker">Datasucker</string>
    <string name="decoy">Decoy</string>
    <string name="dedicated_response_team">Dedicated Response Team</string>
    <string name="dedicated_server">Dedicated Server</string>
    <string name="deep_thought">Deep Thought</string>
</resources>